# groundlight-mcp-server

./: Dockerfile  Makefile  README.md  fetch-docs.sh  pyproject.toml
resources/groundlight=applications/: Building-Groundlight-Applications.md
src/groundlight_mcp_server/: __init__.py  server.py  utils.py
