[project]
name = "groundlight-mcp-server"
version = "0.1.0"
description = "Allow LLMs to interact with Groundlight!"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Groundlight AI" }]
license = { text = "Apache-2.0" }
dependencies = [
    "framegrab>=0.11.3",
    "groundlight>=0.22.4",
    "mcp[cli]>=1.6.0",
    "pillow>=10.0.0",
    "pydantic>=2.8.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
dev = ["ruff>=0.7.3", "pytest>=8.0.0"]

[project.scripts]
groundlight-mcp-server = "groundlight_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["ruff>=0.7.3", "pytest>=8.0.0"]
